--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
                 };
 
                 const photo = document.createElement('img');
-                photo.src = `images/photo${i}.jpg`;
+                photo.src = `photo${i}.jpg`;
                 photo.alt = `Birthday Photo ${i}`;
 
                 galleryItem.appendChild(photo);
