--- a/gallery2.html
+++ b/gallery2.html
@@ -49,7 +49,7 @@
                 galleryItem.classList.add('gallery-item');
 
                 const photo = document.createElement('img');
-                photo.src = `image/img${i}.jpg`;
+                photo.src = `img${i}.jpg`;
                 photo.alt = `Photo ${i}`;
 
                 galleryItem.appendChild(photo);
